--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "14.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
