--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reselect": "^4.1.6",
+    "serve": "^14.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
