--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build -- --profile",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
